k8s/kubernetes.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    konghq.com/methods: GET
    konghq.com/regex-priority: "200"
    konghq.com/strip-path: "false"
    konghq.com/preserve-host: "false"
  name: app-demo-spec-pet-pet-findpetsbystatus
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - backend:
              service:
                name: app-demo-spec
                port:
                  number: 80
            path: /~/app-demo-spec/pipeline/training/v1/lmodesto-veecode$
            pathType: ImplementationSpecific
      host: ec2.enviroment.platform.vee.codes
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    konghq.com/methods: POST
    konghq.com/regex-priority: "200"
    konghq.com/strip-path: "false"
    konghq.com/preserve-host: "false"
  name: app-demo-spec-pet-pet-addpet
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - backend:
              service:
                name: app-demo-spec
                port:
                  number: 80
            path: /~/app-demo-spec/pipeline/training/v1/lmodesto-veecode$
            pathType: ImplementationSpecific
      host: ec2.enviroment.platform.vee.codes
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    konghq.com/methods: PUT
    konghq.com/regex-priority: "200"
    konghq.com/strip-path: "false"
    konghq.com/preserve-host: "false"
  name: app-demo-spec-pet-pet-updatepet
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - backend:
              service:
                name: app-demo-spec
                port:
                  number: 80
            path: /~/app-demo-spec/pipeline/training/v1/lmodesto-veecode$
            pathType: ImplementationSpecific
      host: ec2.enviroment.platform.vee.codes
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    konghq.com/path: /
    konghq.com/plugins: pet-cors,pet-request-transformer
    konghq.com/protocol: http
  name: app-demo-spec
spec:
  type: ExternalName
  externalName: test.godigibee.io
---
